--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -13,7 +13,7 @@
 		邮箱：<input type="text" name="email" value="<%= user.email%>" /><br />
 		网址：<input type="text" name="website" value="/u/<%=user.name%>" /><br />
 	<%}else{%>
-		姓名：<input type="text" name="name" value="<%= user.name%>" /><br />
+		姓名：<input type="text" name="name" value="1" /><br />
 		邮箱：<input type="text" name="email" value="<%= user.email%>" /><br />
 		网址：<input type="text" name="website" value="http://" /><br />
 	<%}%>	
