完成增加标签和pv统计功能

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,8 @@
 <%- include header %>
 <form method="post">
 	<input type="text" name="title" /><br />
+	<br />
+	<input type="text" name="tag1" /><input type="text" name="tag2" /><input type="text" name="tag3" /><br/>
 	<textarea name="post" rows="20" cols="100"></textarea><br/>
 	<input type="submit" value="发表"/>	
 </form>
