--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,10 +1,13 @@
 <br />
 <% post.comments.forEach(function(comment, index){ %>
+<div style="padding-left:4em">
 <p>
+	<img src="<%= comment.head%>" class="l_head" />
 	<a href="<%= comment.website%>"><%= comment.name%></a>
 	<span class="info">回复于<%= comment.time%></span>
 </p>
 <p><%= comment.content%></p>
+</div>
 <%})%>
 
 <form method="post">
@@ -13,9 +16,9 @@
 		邮箱：<input type="text" name="email" value="<%= user.email%>" /><br />
 		网址：<input type="text" name="website" value="/u/<%=user.name%>" /><br />
 	<%}else{%>
-		姓名：<input type="text" name="name" value="1" /><br />
-		邮箱：<input type="text" name="email" value="<%= user.email%>" /><br />
-		网址：<input type="text" name="website" value="http://" /><br />
+		姓名：<input type="text" name="name" /><br />
+		邮箱：<input type="text" name="email" /><br />
+		网址：<input type="text" name="website"/><br />
 	<%}%>	
 	<textarea name="content" rows="5" cols="80"></textarea><br />
 	<input type="submit" name="留言" />
